Code update index and scripts file one

--- a/response.css
+++ b/response.css
@@ -80,7 +80,7 @@
     }
 
     #predictionsList {
-        /* margin: 0 0.5rem 0 0;come back here */
+        /* height: 100vh !important; come back here */
     }
 
     /* ALL WRAPPER */
