--- a/ani.css
+++ b/ani.css
@@ -1,4 +1,4 @@
-/* Basic styling for the modal */
+Basic styling for the modal
 .modal {
     position: fixed;
     bottom: -100%;
@@ -67,6 +67,7 @@
 
 .btn-submit:hover {
     background-color: #45a049;
+    display: none !important;
 }
 
 /* Modal header styling */
